...
              textInputAction: TextInputAction.send,
              decoration: InputDecoration(border: OutlineInputBorder())),
          ButtonTheme.bar(
              // make buttons use the appropriate styles for cards
              child: ButtonBar(children: <Widget>[
            FlatButton(
              child: const Text('Cancel'),
              onPressed: () {
                Navigator.of(context).pop();
              },
            ),
            FlatButton(
              child: const Text('Post question'),
              //Example for Posting to API via inline generated JSON
              onPressed: () => widget.questionApi
                      .questionPostQuestion(
                          widget.lecture.id,
                          QuestionCreate.fromJson(
                              {'pointedQuestion': _controller.text}))
...
