...
                            setState(() {
                              _studentQuestionsisData = false;
                            });
                            _load();
                          });
                        },
                        child: Text('Ask a question'),
                        color: Colors.primaries[0],
                        shape: RoundedRectangleBorder(
                            borderRadius: BorderRadius.circular(30.0)),
                      ),
                      RaisedButton(
                        onPressed: () {
                          Navigator.of(context).pushNamed(
                              '/lecture/questions/all',
                              arguments: widget.lecture.questions);
                        },
                        child: Text('Show All Questions'),
                        color: Colors.primaries[0],
                        shape: RoundedRectangleBorder(
                            borderRadius: BorderRadius.circular(30.0)),
                      ),
                    ],
                  ),
...
